Styles for overflowing td characters and ellipsis and fixed issue with individual row selection

--- a/css/ussba.css
+++ b/css/ussba.css
@@ -3,10 +3,20 @@ body {
     font-size: 18px;
 }
 
+.unexpanded {
+    height: 1.4rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .example tr {
     display: grid;
+    grid-gap: .1rem;
     grid-template-columns: 15% 15% 10% 30% 20% 10%;
     grid-template-rows: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .arrow {
